Details
-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
5.2.1
-
None
-
Standard Linux installation with X (Arch Linux)
Description
When listening for keyPress events and keyRelease events the QKeyEvent::modifiers are incorrectly set for the meta key.
When pressing Super_Key_L -
keyPressEvent - Modifier does not contain Qt::META
keyReleaseEvent - Modifier contains Qt::META
This behavior is the opposite in contrast to the Qt::CTRL and Qt::ALT modifiers.
A git repo has a simple test file which highlights the issue - git://anongit.kde.org/scratch/vhanda/qt5-meta-modifier-bug
Attachments
For Gerrit Dashboard: QTBUG-38428 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
86598,1 | Add support for the different Meta keys in QKeyEvent::modifiers | stable | qt/qtbase | Status: ABANDONED | -2 | 0 |
87615,2 | Translate Super/Hyper keys to MetaModifier | 5.3 | qt/qtbase | Status: MERGED | -1 | 0 |