src/qmlcontrols/kquickcontrols/private/keysequencehelper.cpp
@@ -426,6 +426,8 @@ void KeySequenceHelper::keyPressed(int key, int modifiers)
     case Qt::Key_Control:
     case Qt::Key_Alt:
     case Qt::Key_Meta:
+    case Qt::Key_Super_L:
+    case Qt::Key_Super_R:
     case Qt::Key_Menu: //unused (yes, but why?)
         d->controlModifierlessTimout();
         d->updateShortcutDisplay();
